# CryptoMineX-Serivce

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs
src/models/: mod.rs  round.rs
src/routes/: closeround.rs  mod.rs  round.rs  routes.rs  ticket.rs
src/utils/: intance.rs  mod.rs  pda.rs
