[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]

anchor-client = { version = "0.30.1", features = ["async"] }
anchor-lang = "0.30.1"
solana-sdk = "1.18.26"


mongodb = "2.8.2"


axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }


anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
